==> Moddable-OpenSource/moddable/modules/io/wifi/esp32/wifi-esp32.c <==
#include "xsmc.h"
#include "xsHost.h"
#include "mc.xs.h"
#include "builtinCommon.h"
#include "esp_wifi.h"
#include "esp_netif.h"
#include "lwip/ip6_addr.h"

static const char *authmodeToString(wifi_auth_mode_t authmode)
{
	static const char *const modes[] = {
		"none", "wep", "wpa_psk", "wpa2_psk", "wpa_wpa2_psk",
		"wpa2_enterprise", "wpa3_psk", "wpa2_wpa3_psk"
	};
	if (authmode < 8)
		return modes[authmode];
	return "unknown";
}

void xs_wifi419(xsMachine *the)
{
	xsSlot *onChanged = builtinGetCallback(the, xsID_onChanged);

	xsWiFi wf = c_calloc(1, sizeof(xsWiFiRecord));
	if (!wf)
		xsUnknownError("no memory");

	wf->the = the;
	wf->obj = xsThis;
	__atomic_store_n(&wf->useCount, 1, __ATOMIC_SEQ_CST);
	wf->onChanged = onChanged;

	xsmcSetHostData(xsThis, wf);
	xsSetHostHooks(xsThis, &xsWiFiHooks);
	xsRemember(wf->obj);

	initWiFi();

	wifi_ap_record_t ap_info;
	if (ESP_OK == esp_wifi_sta_get_ap_info(&ap_info)) {
		wf->connected = 1;

		esp_netif_ip_info_t ip_info;
		if (ESP_OK == esp_netif_get_ip_info(gStation, &ip_info) && ip_info.ip.addr)
			wf->ip |= 0x01;

		esp_ip6_addr_t ip6;
		if (ESP_OK == esp_netif_get_ip6_linklocal(gStation, &ip6))
			wf->ip |= 0x02;

		gIP = wf->ip;
	}

	wf->next = gWiFiList;
	gWiFiList = wf;
}

static void initWiFi(void)
{
	wifi_mode_t mode;
	if (ESP_OK == esp_wifi_get_mode(&mode)) {
		if (!gStation)
			gStation = esp_netif_get_handle_from_ifkey("WIFI_STA_DEF");
		return;
	}

	if (gStation) return;

	esp_netif_init();
	esp_err_t err = esp_event_loop_create_default();
	if (ESP_ERR_INVALID_STATE != err)
		ESP_ERROR_CHECK(err);

	gStation = esp_netif_create_default_wifi_sta();

	wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
	cfg.nvs_enable = 0;
	ESP_ERROR_CHECK(esp_wifi_init(&cfg));
	ESP_ERROR_CHECK(esp_wifi_set_storage(WIFI_STORAGE_RAM));
	ESP_ERROR_CHECK(esp_wifi_set_mode(WIFI_MODE_STA));

	ESP_ERROR_CHECK(esp_event_handler_register(WIFI_EVENT, ESP_EVENT_ANY_ID, doWiFiEvent, C_NULL));
	ESP_ERROR_CHECK(esp_event_handler_register(IP_EVENT, ESP_EVENT_ANY_ID, doIPEvent, C_NULL));

	ESP_ERROR_CHECK(esp_wifi_start());
}

static void wifiScanDeliver(void *the, void *refcon, uint8_t *msgIn, uint16_t msgLen)
{
	xsWiFi wf = refcon;

	if (wf->closed || !wf->scanning)
		goto bail;

	wf->scanning = 0;

	xsBeginHost(the);

	wifi_ap_record_t bss;
	xsmcVars(1);
	while (ESP_OK == esp_wifi_scan_get_ap_record(&bss)) {
		xsTry {
			xsmcSetNewObject(xsResult);

			xsmcSetString(xsVar(0), (char *)bss.ssid);
			xsmcSet(xsResult, xsID_SSID, xsVar(0));

			xsVar(0) = xsStringBuffer(NULL, 17);
			formatMAC(bss.bssid, xsmcToString(xsVar(0)));
			xsmcSet(xsResult, xsID_BSSID, xsVar(0));

			xsmcSetInteger(xsVar(0), bss.rssi);
			xsmcSet(xsResult, xsID_RSSI, xsVar(0));

			xsmcSetInteger(xsVar(0), bss.primary);
			xsmcSet(xsResult, xsID_channel, xsVar(0));

			xsmcSetStringX(xsVar(0), (char *)authmodeToString(bss.authmode));
			xsmcSet(xsResult, xsID_security, xsVar(0));

			xsCallFunction1(xsReference(wf->onFound), wf->obj, xsResult);
		}
		xsCatch {
		}
	}

	if (wf->onComplete)
		xsCallFunction0(xsReference(wf->onComplete), wf->obj);

	xsEndHost(the);

bail:
	xs_wifi419_destructor(wf);
}

static void wifiConnectDeliver(void *the, void *refcon, uint8_t *msgIn, uint16_t msgLen)
{
	xsWiFi wf = refcon;
	WiFiEventMsg *msg = (WiFiEventMsg *)msgIn;
	uint8_t prevConnecting = wf->connecting, prevConnected = wf->connected, prevIP = wf->ip;

	if (wf->closed)
		goto bail;

	xsBeginHost(the);

	if (WIFI_EVENT_STA_CONNECTED == msg->event_id) {
		wf->connecting = 0;
		wf->connected = 1;
		wf->ip = msg->ipInit;
	}
	else if (WIFI_EVENT_STA_DISCONNECTED == msg->event_id) {
		wf->connecting = 0;
		wf->connected = 0;
		wf->ip = 0;
	}
	else if (IP_EVENT_STA_GOT_IP == msg->event_id) {
		wf->connected = 1;
		wf->ip = 0x03;
	}

	if (wf->onChanged &&
		((prevConnecting != wf->connecting) ||
		 (prevConnected != wf->connected) ||
		 (prevIP != wf->ip)))
		xsCallFunction0(xsReference(wf->onChanged), wf->obj);

	xsEndHost(the);

bail:
	xs_wifi419_destructor(wf);
}

void xs_wifi419_scan(xsMachine *the)
{
	xsWiFi wf = xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);

	if (gScan)
		xsUnknownError("already scanning");

	wf->onFound = builtinGetCallback(the, xsID_onFound);
	if (!wf->onFound) 
		xsUnknownError("onFound required");
	wf->onComplete = builtinGetCallback(the, xsID_onComplete);

	wifi_scan_config_t config = {0};
	config.scan_type = WIFI_SCAN_TYPE_ACTIVE;

	if (xsmcHas(xsArg(0), xsID_channel)) {
		xsSlot tmp;
		xsmcGet(tmp, xsArg(0), xsID_channel);
		config.channel = xsmcToInteger(tmp);
	}

	wf->scanning = 1;
	gScan = wf;
	if (ESP_OK != esp_wifi_scan_start(&config, 0)) {
		wf->scanning = 0;
		gScan = C_NULL;
		xsUnknownError("scan failed");
	}
}

void xs_wifi419_connect(xsMachine *the)
{
	xsWiFi wf = xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);

	if (wf->connecting)
		xsUnknownError("already connecting");

	wifi_config_t config = {0};
	config.sta.scan_method = WIFI_ALL_CHANNEL_SCAN;
	config.sta.sort_method = WIFI_CONNECT_AP_BY_SIGNAL;

	xsmcVars(1);

	if (xsmcHas(xsArg(0), xsID_SSID)) {
		xsmcGet(xsVar(0), xsArg(0), xsID_SSID);
		char *ssid = xsmcToString(xsVar(0));
		if (c_strlen(ssid) > sizeof(config.sta.ssid))
			xsRangeError("SSID too long");
		c_memcpy(config.sta.ssid, ssid, c_strlen(ssid));
	}

	if (xsmcHas(xsArg(0), xsID_password)) {
		xsmcGet(xsVar(0), xsArg(0), xsID_password);
		char *password = xsmcToString(xsVar(0));
		if (c_strlen(password) > sizeof(config.sta.password))
			xsRangeError("password too long");
		c_memcpy(config.sta.password, password, c_strlen(password));
	}

	if (xsmcHas(xsArg(0), xsID_channel)) {
		xsmcGet(xsVar(0), xsArg(0), xsID_channel);
		int channel = xsmcToInteger(xsVar(0));
		if ((channel < 1) || (channel > 13))
			xsRangeError("invalid channel");
		config.sta.channel = channel;
	}

	esp_wifi_set_config(WIFI_IF_STA, &config);

	wf->connecting = 1;
	if (ESP_OK != esp_wifi_connect()) {
		wf->connecting = 0;
		xsUnknownError("connect failed");
	}
}

void xs_wifi419_disconnect(xsMachine *the)
{
	xsWiFi wf = xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);

	esp_wifi_disconnect();

	wf->connecting = 0;
	wf->connected = 0;
	wf->ip = 0;
	gIP = 0;
}

void xs_wifi419_address_get(xsMachine *the)
{
	xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);

	if (!gStation) return;

	esp_netif_ip_info_t info;
	if (ESP_OK == esp_netif_get_ip_info(gStation, &info) && info.ip.addr) {
		xsResult = xsStringBuffer(NULL, 39);
		esp_ip4addr_ntoa(&info.ip, xsmcToString(xsResult), 40);
		return;
	}

	esp_ip6_addr_t ip6;
	if (ESP_OK == esp_netif_get_ip6_linklocal(gStation, &ip6)) {
		xsResult = xsStringBuffer(NULL, 39);
		ip6addr_ntoa_r((ip6_addr_t *)&ip6, xsmcToString(xsResult), 40);
	}
}

void xs_wifi419_MAC_get(xsMachine *the)
{
	xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);
	uint8_t mac[6];

	if (ESP_OK != esp_wifi_get_mac(WIFI_IF_STA, mac))
		return;

	xsResult = xsStringBuffer(NULL, 17);
	formatMAC(mac, xsmcToString(xsResult));
}

void xs_wifi419_SSID_get(xsMachine *the)
{
	xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);
	wifi_ap_record_t info;

	if (ESP_OK != esp_wifi_sta_get_ap_info(&info))
		return;

	xsmcSetString(xsResult, (char *)info.ssid);
}

void xs_wifi419_BSSID_get(xsMachine *the)
{
	xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);
	wifi_ap_record_t info;

	if (ESP_OK != esp_wifi_sta_get_ap_info(&info))
		return;

	xsResult = xsStringBuffer(NULL, 17);
	formatMAC(info.bssid, xsmcToString(xsResult));
}

void xs_wifi419_RSSI_get(xsMachine *the)
{
	xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);
	wifi_ap_record_t info;

	if (ESP_OK != esp_wifi_sta_get_ap_info(&info))
		return;

	xsmcSetInteger(xsResult, info.rssi);
}

void xs_wifi419_channel_get(xsMachine *the)
{
	xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);
	wifi_ap_record_t info;

	if (ESP_OK != esp_wifi_sta_get_ap_info(&info))
		return;

	xsmcSetInteger(xsResult, info.primary);
}
