==> Moddable-OpenSource/moddable/modules/io/wifi/pico/wifi-pico.c <==
#include "xsmc.h"
#include "xsHost.h"
#include "mc.xs.h"
#include "builtinCommon.h"
#include "pico/cyw43_arch.h"
#include "lwip/netif.h"
#include "lwip/ip4_addr.h"
#include "lwip/dhcp.h"
#include "modTimer.h"

static const char *authmodeToString(uint32_t authmode)
{
	switch (authmode) {
		case CYW43_AUTH_OPEN:			return "none";
		case CYW43_AUTH_WPA_TKIP_PSK:	return "wpa_psk";
		case CYW43_AUTH_WPA2_AES_PSK:	return "wpa2_psk";
		case CYW43_AUTH_WPA2_MIXED_PSK:	return "wpa_wpa2_psk";
		default:						return "unknown";
	}
}

void xs_wifi419(xsMachine *the)
{
	xsSlot *onChanged = builtinGetCallback(the, xsID_onChanged);

	xsWiFi wf = c_calloc(1, sizeof(xsWiFiRecord));
	if (!wf)
		xsUnknownError("no memory");

	wf->the = the;
	wf->obj = xsThis;
	wf->useCount = 1;
	wf->onChanged = onChanged;

	xsmcSetHostData(xsThis, wf);
	xsSetHostHooks(xsThis, (xsHostHooks *)&xsWiFiHooks);
	xsRemember(wf->obj);

	initWiFi(the);

	int status = cyw43_tcpip_link_status(&cyw43_state, CYW43_ITF_STA);
	if (CYW43_LINK_UP == status) {
		wf->connected = 1;
		wf->gotIP = 1;
	}
	else if (CYW43_LINK_JOIN == status || CYW43_LINK_NOIP == status) {
		wf->connected = 1;
	}

	wf->next = gWiFiList;
	gWiFiList = wf;
}

static void initWiFi(xsMachine *the)
{
	if (gInited) return;

	int err = pico_use_cyw43();
	if (err)
		xsUnknownError("CYW43 init failed %d", err);

	cyw43_arch_enable_sta_mode();

	netif_set_link_callback(netif_list, wifiLinkCallback);
	netif_set_status_callback(netif_list, wifiStatusCallback);

	gInited = 1;
}

static void wifiScanDeliver(void *the, void *refcon, uint8_t *msgIn, uint16_t msgLen)
{
	xsWiFi wf = refcon;

	if (wf->closed || !wf->scanning)
		goto bail;

	wf->scanning = 0;

	xsBeginHost(the);

	xsmcVars(1);
	WiFiScanResultNode *node;
	while (NULL != (node = gScanResults)) {
		gScanResults = node->next;

		xsTry {
			xsmcSetNewObject(xsResult);

			xsmcSetString(xsVar(0), node->ssid);
			xsmcSet(xsResult, xsID_SSID, xsVar(0));

			xsVar(0) = xsStringBuffer(NULL, 17);
			formatMAC(node->bssid, xsmcToString(xsVar(0)));
			xsmcSet(xsResult, xsID_BSSID, xsVar(0));

			xsmcSetInteger(xsVar(0), node->rssi);
			xsmcSet(xsResult, xsID_RSSI, xsVar(0));

			xsmcSetInteger(xsVar(0), node->channel);
			xsmcSet(xsResult, xsID_channel, xsVar(0));

			xsmcSetStringX(xsVar(0), (char *)authmodeToString(node->authmode));
			xsmcSet(xsResult, xsID_security, xsVar(0));

			xsCallFunction1(xsReference(wf->onFound), wf->obj, xsResult);
		}
		xsCatch {
		}

		c_free(node);
	}

	if (wf->onComplete)
		xsCallFunction0(xsReference(wf->onComplete), wf->obj);

	xsEndHost(the);

bail:
	freeScanResults();
	xs_wifi419_destructor(wf);
}

static void wifiConnectDeliver(void *the, void *refcon, uint8_t *msgIn, uint16_t msgLen)
{
	xsWiFi wf = refcon;
	WiFiEventMsg *msg = (WiFiEventMsg *)msgIn;
	uint8_t prevConnecting = wf->connecting, prevConnected = wf->connected, prevIP = wf->gotIP;

	if (wf->closed)
		goto bail;

	if (PICO_EVENT_CONNECTED == msg->event) {
		wf->connecting = 0;
		wf->connected = 1;
		wf->gotIP = 0;
	}
	else if (PICO_EVENT_DISCONNECTED == msg->event) {
		wf->connecting = 0;
		wf->connected = 0;
		wf->gotIP = 0;
	}
	else if (PICO_EVENT_GOT_IP == msg->event) {
		wf->connected = 1;
		wf->gotIP = 1;
	}

	if (wf->onChanged) {
		uint8_t connection = (prevConnecting != wf->connecting) ||
								 (prevConnected != wf->connected) ||
								 (prevIP != wf->gotIP);
		if (connection || msg->addressChanged) {
			xsSlot tmp;
			xsBeginHost(the);
			if (connection) {
				xsmcSetStringX(tmp, "connection");
				xsCallFunction1(xsReference(wf->onChanged), wf->obj, tmp);
			}
			if (msg->addressChanged && !wf->closed) {
				xsmcSetStringX(tmp, "address");
				xsCallFunction1(xsReference(wf->onChanged), wf->obj, tmp);
			}
			xsEndHost(the);
		}
	}

bail:
	xs_wifi419_destructor(wf);
}

void xs_wifi419_scan(xsMachine *the)
{
	xsWiFi wf = xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);

	if (gScan)
		xsUnknownError("already scanning");

	wf->onFound = builtinGetCallback(the, xsID_onFound);
	if (!wf->onFound)
		xsUnknownError("onFound required");
	wf->onComplete = builtinGetCallback(the, xsID_onComplete);

	freeScanResults();

	cyw43_wifi_scan_options_t scan_options = {0};
	wf->scanning = 1;
	gScan = wf;
	int err = cyw43_wifi_scan(&cyw43_state, &scan_options, NULL, scanResultCallback);
	if (err) {
		wf->scanning = 0;
		gScan = C_NULL;
		xsUnknownError("scan failed %d", err);
	}

	startActivityTimer();
}

void xs_wifi419_connect(xsMachine *the)
{
	xsWiFi wf = xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);

	if (wf->connecting)
		xsUnknownError("already connecting");

	uint8_t ssid[33] = {0};
	uint8_t password[65] = {0};
	uint32_t auth = CYW43_AUTH_OPEN;

	xsmcVars(1);
	if (!xsmcHas(xsArg(0), xsID_SSID))
		xsUnknownError("SSID required");

	xsmcGet(xsVar(0), xsArg(0), xsID_SSID);
	xsmcToStringBuffer(xsVar(0), (char *)ssid, sizeof(ssid));

	if (xsmcHas(xsArg(0), xsID_password)) {
		xsmcGet(xsVar(0), xsArg(0), xsID_password);
		xsmcToStringBuffer(xsVar(0), (char *)password, sizeof(password));
		auth = CYW43_AUTH_WPA2_AES_PSK;
	}

	int err = cyw43_arch_wifi_connect_async((const char *)ssid, (const char *)password, auth);
	if (err)
		xsUnknownError("connect failed %d", err);

	wf->connecting = 1;

	startActivityTimer();
}

void xs_wifi419_disconnect(xsMachine *the)
{
	xsWiFi wf = xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);

	cyw43_wifi_leave(&cyw43_state, CYW43_ITF_STA);

	wf->connecting = 0;
	wf->connected = 0;
	wf->gotIP = 0;
}

void xs_wifi419_address_get(xsMachine *the)
{
	(void)xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);

	if (!netif_is_up(netif_list))
		return;

	const ip4_addr_t *ip = netif_ip4_addr(netif_list);
	if (!ip->addr)
		return;

	xsResult = xsStringBuffer(NULL, 15);
	ipaddr_ntoa_r(ip, xsmcToString(xsResult), 16);
}

void xs_wifi419_MAC_get(xsMachine *the)
{
	(void)xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);
	uint8_t mac[6];

	cyw43_wifi_get_mac(&cyw43_state, CYW43_ITF_STA, mac);

	xsResult = xsStringBuffer(NULL, 17);
	formatMAC(mac, xsmcToString(xsResult));
}

void xs_wifi419_SSID_get(xsMachine *the)
{
	(void)xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);
	uint8_t buf[36];

	if (0 == cyw43_ioctl(&cyw43_state, CYW43_IOCTL_GET_SSID, sizeof(buf), buf, CYW43_ITF_STA)) {
		uint32_t len = c_read32(buf);
		if (len && (len <= 32))
			xsmcSetStringBuffer(xsResult, (char *)(buf + sizeof(uint32_t)), len);
	}	
}

void xs_wifi419_BSSID_get(xsMachine *the)
{
	(void)xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);
	uint8_t bssid[6];

	if (0 == cyw43_wifi_get_bssid(&cyw43_state, bssid)) {
		xsResult = xsStringBuffer(NULL, 17);
		formatMAC(bssid, xsmcToString(xsResult));
	}
}

void xs_wifi419_RSSI_get(xsMachine *the)
{
	(void)xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);
	int32_t rssi;

	if (0 == cyw43_wifi_get_rssi(&cyw43_state, &rssi))
		xsmcSetInteger(xsResult, rssi);
}

void xs_wifi419_channel_get(xsMachine *the)
{
	(void)xsmcGetHostDataValidate(xsThis, (void *)&xsWiFiHooks);
	uint32_t channel;

	if (0 == cyw43_ioctl(&cyw43_state, CYW43_IOCTL_GET_CHANNEL, sizeof(channel), (uint8_t *)&channel, CYW43_ITF_STA))
		xsmcSetInteger(xsResult, channel);
}
